@@ -15,7 +15,7 @@
  */
 
 
-int io_poller_init(io_poller *poller, poller_type type)
+int io_poller_init(io_poller *poller, io_poller_type type)
 {
 	// TODO: make this routine select a proper poller at runtime.
 	// TODO: this routine should probably also take an argument
@@ -35,6 +35,7 @@ int io_poller_init(io_poller *poller, poller_type type)
 #ifdef USE_EPOLL
 	if(type & POLLER_EPOLL) {
 		poller->poller_name = "epoll";
+		poller->poller_type = POLLER_EPOLL;
 		poller->funcs.dispose = (void*)io_epoll_poller_dispose;
 		poller->funcs.fd_check = (void*)io_epoll_fd_check;
 		poller->funcs.add = (void*)io_epoll_add;
@@ -50,6 +51,7 @@ int io_poller_init(io_poller *poller, poller_type type)
 #ifdef USE_POLL
 	if(type & POLLER_POLL) {
 		poller->poller_name = "poll";
+		poller->poller_type = POLLER_POLL;
 		poller->funcs.dispose = (void*)io_poll_poller_dispose;
 		poller->funcs.fd_check = (void*)io_poll_fd_check;
 		poller->funcs.add = (void*)io_poll_add;
@@ -65,6 +67,7 @@ int io_poller_init(io_poller *poller, poller_type type)
 #ifdef USE_SELECT
 	if(type & POLLER_SELECT) {
 		poller->poller_name = "select";
+		poller->poller_type = POLLER_SELECT;
 		poller->funcs.dispose = (void*)io_select_poller_dispose;
 		poller->funcs.fd_check = (void*)io_select_fd_check;
 		poller->funcs.add = (void*)io_select_add;
@@ -80,6 +83,7 @@ int io_poller_init(io_poller *poller, poller_type type)
 #ifdef USE_MOCK
 	if(type & POLLER_MOCK) {
 		poller->poller_name = "mock";
+		poller->poller_type = POLLER_MOCK;
 		poller->funcs.dispose = (void*)io_mock_poller_dispose;
 		poller->funcs.fd_check = (void*)io_mock_fd_check;
 		poller->funcs.add = (void*)io_mock_add;
